# pybitcoinkernel

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: unit-tests.yml  wheels.yml
docs/: EXAMPLES.md
examples/: 01_transactions.py  02_script_verification.py  03_blocks_and_headers.py  04_chainstate_basics.py  05_spent_outputs.py  06_callbacks_and_logging.py  07_script_debugger.py  _miner.py
scripts/: cmd_generator.py  manual_debug.py
src/: _bitcoinkernel.c
src/pybitcoinkernel/: __init__.py  debugger.py
tests/: conftest.py  test_chainstate.py  test_logging.py  test_primitives.py  test_script_debugger.py  test_script_verify.py  util.py
