[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pybitcoinkernel"
version = "0.1.0"
description = "Python bindings for Bitcoin Core's libbitcoinkernel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["bitcoin", "kernel", "consensus", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pybitcoinkernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
