[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pybitcoinkernel"
version = "0.1.0"
description = "Python bindings for Bitcoin Core's libbitcoinkernel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["bitcoin", "kernel", "consensus", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pybitcoinkernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- cibuildwheel: prebuilt wheels for PyPI --------------------------------
# The kernel is compiled once per build container in before-all and dropped
# into the vendor/ prefix, which setup.py picks up. auditwheel then grafts
# libbitcoinkernel into each wheel and rewrites the rpaths, producing
# self-contained wheels.

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
# The kernel build assumes glibc; musl wheels would need their own porting.
skip = "*-musllinux*"
# manylinux_2_34 (AlmaLinux 9) rather than 2_28 (AlmaLinux 8): the kernel
# needs Boost >= 1.73 and el9 ships 1.75 while el8 only has 1.66. Targets
# glibc >= 2.34, i.e. Ubuntu 22.04+, Debian 12+, Fedora 35+.
manylinux-x86_64-image = "manylinux_2_34"
manylinux-aarch64-image = "manylinux_2_34"
test-requires = "pytest"
test-command = "python -m pytest {project}/tests -q"

[tool.cibuildwheel.linux]
before-all = [
    "dnf install -y boost-devel",
    "cmake -S {project}/external/bitcoin -B /tmp/btck-build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DBUILD_KERNEL_LIB=ON -DBUILD_DAEMON=OFF -DBUILD_CLI=OFF -DBUILD_TX=OFF -DBUILD_UTIL=OFF -DBUILD_TESTS=OFF -DBUILD_BENCH=OFF -DBUILD_FUZZ_BINARY=OFF -DENABLE_WALLET=OFF -DWITH_ZMQ=OFF -DENABLE_IPC=OFF",
    "cmake --build /tmp/btck-build --target bitcoinkernel --parallel $(nproc)",
    "mkdir -p {project}/vendor/lib {project}/vendor/include",
    "cp -a /tmp/btck-build/lib/libbitcoinkernel.so* {project}/vendor/lib/",
    "cp {project}/external/bitcoin/src/kernel/bitcoinkernel.h {project}/vendor/include/",
]
